issue no #224 solved "overlapping-text-tag-button"

--- a/styles/portfolio-item.module.css
+++ b/styles/portfolio-item.module.css
@@ -4,7 +4,7 @@
   padding-top: 20px;
   border-radius: 10px;
   margin-bottom: 8px;
-  min-height: 100%;
+  min-height: 300px;
   position: relative;
 }
 
@@ -65,7 +65,7 @@
 
 @media only screen and (max-width: 940px) {
   .portfolio__keyword {
-    padding: 3px 5px;
+    padding: 0px 5px;
     margin-right: 7px;
   }
 
@@ -82,5 +82,11 @@
   .portfolio__keyword {
     padding: 5px 10px;
     margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .portfolio__item {
+    min-height:400px;
   }
 }
